--- a/.env.example
+++ b/.env.example
@@ -10,9 +10,7 @@ SEC_LLM_OPENAI_API_KEY=""
 SEC_LLM_EDGAR_IDENTITY="Your Name your@email.com"
 
 # --- Optional: LLM model selection ---
-SEC_LLM_PLANNER_MODEL="gpt-4o"
-SEC_LLM_SUMMARIZER_MODEL="gpt-4o-mini"
-SEC_LLM_CLARIFICATION_MODEL="gpt-4o"
+SEC_LLM_AGENT_MODEL="gpt-4o"
 
 # --- Optional: runtime tuning ---
 SEC_LLM_SEC_CACHE_TTL_SECONDS=900
